Minor z-index fix in grid and inheritance with no children

--- a/platforms/common/css-compiled/g-admin.css
+++ b/platforms/common/css-compiled/g-admin.css
@@ -4925,7 +4925,7 @@ i.fa-gantry, i.fa-gantry-logo, i.fa-gantry-symbol, i.fa-gantry-logo-both, i.fa-g
   z-index: 0;
 }
 #g5-container .g-inheriting:not(.g-inheriting-children) .g-grid {
-  z-index: 1;
+  z-index: 5;
 }
 @media only all and (min-width: 48rem) {
   #g5-container .g5-lm-particles-picker.particles-fixed, #g5-container .g5-lm-particles-picker.particles-absolute {
